--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/pc3?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://node226919-env-3057454.j.layershift.co.uk/pc3?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.password=VQTrmn23668
 
 spring.mvc.view.prefix=/WEB-INF/vistas/
 spring.mvc.view.suffix=.jsp
